@@ -57,6 +57,8 @@ import org.restlet.test.routing.FilterTestCase;
 import org.restlet.test.routing.RedirectTestCase;
 import org.restlet.test.routing.RouteListTestCase;
 import org.restlet.test.security.HttpBasicTestCase;
+import org.restlet.test.security.SecretDigestVerifierTestCase;
+import org.restlet.test.security.SecurityTestCase;
 import org.restlet.test.util.TemplateTestCase;
 
 /**
@@ -104,6 +106,8 @@ public class RestletTestSuite extends TestSuite {
         addTestSuite(RestletXmlTestCase.class);
         addTestSuite(RiapTestCase.class);
         addTestSuite(RouteListTestCase.class);
+        addTestSuite(SecurityTestCase.class);
+        addTestSuite(SecretDigestVerifierTestCase.class);
         addTestSuite(StatusTestCase.class);
         addTestSuite(TemplateFilterTestCase.class);
         addTestSuite(TemplateTestCase.class);
